--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "1.2.0"
+version = "1.1.3"
 group= "com.momnop.simplyconveyors" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "SimplyConveyors"
 
@@ -34,7 +34,7 @@ minecraft {
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20160518"
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
 dependencies {
