--- a/build.gradle
+++ b/build.gradle
@@ -11,17 +11,17 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the nessasary things for Forge to be setup.
 
 
-version = "2.0.0"
-group= "com.momnop.simplyconveyors" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = "2.1.1"
+group= "com.momnop.furniture" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "SimplyConveyors"
 
-sourceCompatibility = targetCompatibility = "1.6" // Need this here so eclipse task generates correctly.
+sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
 compileJava {
-    sourceCompatibility = targetCompatibility = "1.6"
+    sourceCompatibility = targetCompatibility = "1.8"
 }
 
 minecraft {
-    version = "1.11-13.19.0.2180"
+    version = "1.11-13.19.1.2189"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -29,7 +29,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20161111"
+    mappings = "snapshot_20161205"
     makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
