Switch to using oreDict for ores instead of the vanilla item #33. Fix blocks sometimes being unbreakable by disabling Worker Gloves #31. Fix armorItemInSlot causing crashes on servers.

--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the nessasary things for Forge to be setup.
 
 
-version = "2.1.1"
-group= "com.momnop.furniture" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = "3.1.1b"
+group= "com.momnop.simplyconveyors" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "SimplyConveyors"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
@@ -21,7 +21,7 @@ compileJava {
 }
 
 minecraft {
-    version = "1.11-13.19.1.2189"
+    version = "1.11.2-13.20.1.2388"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -29,32 +29,32 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20161205"
+    mappings = "snapshot_20161220"
     makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
+repositories {
+	maven {
+		name = "Progwml6 maven"
+		url = "http://dvs1.progwml6.com/files/maven"
+	}
+	maven {
+		name = "ModMaven"
+		url = "http://modmaven.k-4u.nl"
+	}
+	maven {
+		url = "http://maven.k-4u.nl"
+	}
+	maven {url "http://tehnut.info/maven"}
+}
+
 dependencies {
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
-    // except that these dependencies get remapped to your current MCP mappings
-    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+  // compile against the JEI API
+  deobfCompile "mezz.jei:jei_${mc_version}:${jei_version}:api"
+  deobfCompile "mcp.mobius.waila:Hwyla:${waila_version}"
+  deobfCompile "com.github.mcjty:compatlayer:${compatlayer_version}"
+  // at runtime, use the full JEI jar
+  runtime "mezz.jei:jei_${mc_version}:${jei_version}"
 }
 
 processResources
