Fix weird conveyor wall logic with ramps and conveyors. Fix items not going properly up ramp conveyors. Fix items not transitioning from flat to ramp conveyors.

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the nessasary things for Forge to be setup.
 
 
-version = "3.1.1c"
+version = "3.1.1d"
 group= "com.momnop.simplyconveyors" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "SimplyConveyors"
 
